src/objects/TIMBASURVEYS__AnswerOption__c.object
<CustomObject>
    <fields>
        <fullName>TIMBASURVEYS__IsPicklistValue__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsPicklistValue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__OptionValue__c</fullName>
        <label>OptionValue</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Picklist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Picklist</label>
        <referenceTo>TIMBASURVEYS__Picklist__c</referenceTo>
        <relationshipLabel>AnswerOptions</relationshipLabel>
        <relationshipName>AnswerOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Position__c</fullName>
        <label>Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__ResponseType__c</fullName>
        <label>ResponseType</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>String</fullName>
                </value>
                <value>
                    <fullName>Boolean</fullName>
                </value>
                <value>
                    <fullName>DateTime</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__SurveyQuestion__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SurveyQuestion</label>
        <referenceTo>TIMBASURVEYS__SurveyQuestion__c</referenceTo>
        <relationshipLabel>AnswerOptions</relationshipLabel>
        <relationshipName>AnswerOptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__Weight__c</fullName>
        <label>Weight</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__numericRange__c</fullName>
        <label>numericRange</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__x__c</fullName>
        <label>x</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TIMBASURVEYS__y__c</fullName>
        <label>y</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AnswerOption</label>
    <nameField>
        <label>AnswerOption Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AnswerOptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>